--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body{
     border-bottom: solid black 1px;
     gap: 10px;
     align-items: center;  
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 
 .navbar__s1__title{
@@ -28,13 +32,14 @@ body{
     display: flex;
     gap: 10px;
     align-items: center;  
-
+    background-color: white;
 }
 
 .navbar__s2 input{
     border: none;
     width: 100%;
     font-size: 16px;
+    background-color: transparent;
 }
 
 .navbar__s2 input:focus{
@@ -45,6 +50,28 @@ body{
     display: flex;
     gap: 10px;
     align-items: center;  
+}
+
+/* My Learning popup */
+
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 150%;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+
+.mylearning:hover .mylearning__popup{
+    display: block;
 }
 
 .categories{
@@ -61,8 +88,22 @@ body{
     border-radius: 30px;
 }
 
+.sale-image{
+    position: relative;
+}
+
 .sale-image img{
     width: 100%;
+}
+
+.sale-image__offer{
+    width: 200px;
+    height: 100px;
+    background-color: white;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    padding: 2%;
 }
 
 .recommended{
@@ -136,3 +177,4 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
