--- a/style.css
+++ b/style.css
@@ -86,6 +86,15 @@ body{
     color: white;
     padding: 10px;
     border-radius: 30px;
+    cursor: pointer;
+    border: solid #a435f0 1px;
+}
+
+.categories P:hover{
+    transition: 1s;
+    background-color: transparent;
+    color: #a435f0;
+    border: solid #a435f0 1px;
 }
 
 .sale-image{
@@ -104,6 +113,22 @@ body{
     top: 10%;
     left: 10%;
     padding: 2%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes zoom{
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 .recommended{
