--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ body{
     align-items: center;  
 }
 
+.navbar__s4{
+    display: none;
+}
+
 /* My Learning popup */
 
 .mylearning{
@@ -144,7 +148,9 @@ body{
 }
 
 .course-card{
-    width: 280px;
+    flex-grow: 1;
+    flex-basis: 20%;
+    margin: 5px;
 }
 
 .course-card img{
@@ -203,3 +209,25 @@ body{
     justify-content: space-between;
 }
 
+/* Media  Queries */
+
+@media screen and (max-width:800px){
+    body{
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width:600px){
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+    .navbar__s2, .navbar__s3{
+        display: none;
+    }
+    .navbar__s4{
+        display: block;
+    }
+}
